# Adjust_project

./: .gitignore  README.md  dataset.txt  manage.py  notes.txt  pyproject.toml
API_endpoint_task/: asgi.py  settings.py  urls.py  wsgi.py
app/: managers.py  models.py
app/api/: filters.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_rename_sales_stock.py
